Fixed an issue with images going off-screen and modernizing the appearance of about part

--- a/assets/css/components/about.css
+++ b/assets/css/components/about.css
@@ -25,19 +25,13 @@
   flex-direction: row;
   align-items: center;
 }
-.right-card-side {
+.card-row {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 32px;
+  justify-content: center;
 }
-
-.about-content {
-  font-size: 2.4rem;
-  line-height: 4rem;
-  text-align: justify;
-  text-wrap: wrap;
-}
-
 .profile-container {
   flex-shrink: 0;
   order: -1;
@@ -45,6 +39,48 @@
   flex-direction: column;
   align-items: center;
   gap: 16px;
+  align-self: center;
+}
+.name-and-button-box {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 32px;
+  align-items: center;
+}
+.about-button {
+  align-self: stretch;
+}
+.about-content {
+  font-size: 2.4rem;
+  line-height: 4rem;
+  text-align: justify;
+  text-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (min-width: 1024px) {
+  .card-row {
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+  }
+  .about-title {
+    align-self: flex-start;
+  }
+  .profile-container {
+    align-self: start;
+  }
+  .name-and-button-box {
+    flex-direction: row;
+  }
+  .about-button {
+    align-self: flex-end;
+  }
+  .about-content {
+    align-items: flex-start;
+  }
 }
 
 .about-photo,
@@ -84,8 +120,5 @@
   .about-content-container {
     flex-direction: row;
     gap: 64px;
-  }
-  .profile-container {
-    order: 0;
   }
 }
