--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -51,11 +51,6 @@
 
   background-color: var(--color-bg);
 }
-@media (min-width: 768px) {
-  .align-end {
-    align-self: flex-end;
-  }
-}
 
 .button:hover {
   background-color: var(--color-primary);
@@ -97,7 +92,14 @@
   text-underline-offset: 1.1rem;
   text-align: center;
 }
-
+@media (min-width: 768px) {
+  .align-end {
+    align-self: flex-end;
+  }
+  .title-start {
+    text-align: start;
+  }
+}
 @media (min-width: 320px) {
   .container {
     padding: 32px 4px;
@@ -105,7 +107,7 @@
 }
 @media (min-width: 480px) {
   .container {
-    padding: 64px 30px;
+    padding: 32px 0px;
   }
   .title {
     font-size: 4.8rem;
@@ -117,9 +119,6 @@
 @media (min-width: 1440px) {
   .container {
     padding: 82px;
-  }
-  .container-column {
-    align-items: flex-start;
   }
 }
 
